# serializer version: 1
# name: test_audit
  '''
  No read AppRole (idfdev)
  No write token (token-idfdev)
  
  '''
# ---
# name: test_audit.1
  '''
  Problems with read AppRole (idfdev):
  • Missing policy phalanx/idfdev/read
  • Unexpected policy something
  • Policy phalanx/idfdev/read doesn't have expected contents
  No write token (token-idfdev)
  
  '''
# ---
# name: test_audit.2
  '''
  Problems with read AppRole (idfdev):
  • Unexpected policy extra
  No write token (token-idfdev)
  
  '''
# ---
# name: test_audit.3
  '''
  Problems with write token (token-idfdev):
  • Missing policy phalanx/idfdev/write
  • Unexpected policy something
  • Policy phalanx/idfdev/write doesn't have expected contents
  
  '''
# ---
# name: test_audit.4
  '''
  Multiple write tokens found
  Problems with write token (token-idfdev):
  • Token will expire at <timestamp>
  Problems with write token (token-idfdev):
  • Token expired at <timestamp>
  
  '''
# ---
# name: test_copy_secrets
  '''
  Copying secrets from k8s_operator/data-dev.lsst.cloud to phalanx/idfdev
  Copied Vault secret for argocd
  Copied Vault secret for gafaelfawr
  Copied Vault secret for mobu
  Copied Vault secret for nublado
  Copied Vault secret for postgres
  Copied Vault secret for unknown
  
  '''
# ---
